# odincal-lambda

./: .gitignore  Makefile  app.py  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  tox.ini
.github/workflows/: ci.yml
activate_l2/handler/: activate_l2_handler.py
cache_tables/: __init__.py  requirements.in  requirements.txt
cache_tables/handler/: date_info.py  log_configuration.py  odin_connection.py  scans_info.py  ssm_parameters.py
cache_tables/handlers/: date_info.py  odin_connection.py  populate_cache_table.py  populate_scans_cache_table.py  scans_info.py  time_util.py
create_zpt/: Dockerfile  requirements.in  requirements.txt
create_zpt/handler/: atmos.py  check_era5_handler.py  check_solar_handler.py  check_zpt_handler.py  create_zpt_handler.py  era5_dataset.py  geoloc_tools.py  geos.py  get_scan_ids_handler.py  get_scanids.py  msis90.py  newdonalettyERANC.py  scan_data_descriptions.py
odincal/: .dockerignore  .gitignore  .style.yapf  Dockerfile  README.md  docker-compose.yml  odincal_handler.py  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
odincal/handler/: ac_coverage.py  log_configuration.py  odincal_handler.py  odindb.py
odincal/odincal/: README.txt  setup.py  tox.ini
odincal/odincal/db/: Dockerfile  admin_tools.py  create.sql
odincal/odincal/odincal/: __init__.py  ac_average_data_import.py  ac_average_datafit_import.py  ac_level1a_importer.py  att_level1_importer.py  calibration_preprocess.py  config.py  data_structures.py  database.py  defaults.cfg  frequency_calibration.py  import_level0_dir.py  intensity_calibration.py  launcher.py  level0.py  level0_file_importer.py  level0_fileserver.py  level1b_exporter.py  level1b_exporter_32.py  level1b_exporter_hdf5.py  level1b_exporter_matlab.m  level1b_exporter_step2_32.py  level1b_importer.py  level1b_window_importer.py  level1b_window_importer2.py  level1b_window_importer3.py  level_1b_icalibrate.py  logclient.cfg  logclient.py  logging.conf  logserver.cfg  logserver.py  orbit_export.py  process.py  process_level0_or_calibrate.py  reference_fit.py  shk_level1_importer.py  testorbit.py
odincal/odincal/tests/: test_datatypes.py  test_importer.py  test_level0.py  test_level0_importer.py  testfile.ac1  testfile.ac2  testfile.bogus  testfile.shk
odincal/odincal/util/: tools.py
odincal/oops/: MANIFEST.in  setup.py  tox.ini
odincal/oops/MatLab/: SSBfit.m  findspec.m  frequency.m  getdata.m  loadspec.m  plotspec.m  savespec.m  showbands.m  specindx.m
odincal/oops/Programs/: Makefile.in  ac.c  acdump.c  aos.c  aos.h  aosdump.c  attitude.h  bintable.h  bintest.c  configure  configure.in  fba.c  level0.c  merge.c  mirror.c  odin2fits.c  odinfits.c  odinhdf.c  odinhdf.h  options.c  options.h  osu.c  osu.h  rfits.c  rhdf.c  shk.c  shkdump.c  shkgrp.c  smr_hdf.c  smr_hdf_defs.h  tm.h  wfits.c  whdf.c  wmlab.c
odincal/oops/oops/: aero_1b_logA.py  aero_1b_logB.py  aeronomy.py  aeronomyfile.py  aeroorbit.py  astroorbit.py  attitude.py  atttest.py  autoprocess.py  fba.py  fbaeronomy.py  level0.py  level1a.py  level1b.py  merge_level0.py  odinmodule.c  odinmodule.h  odinpath.py  odinshow.py  odintime.py  odinview.py  orbit.py  orbitfiles.py  pdcaero.py  process.py  statusmess.py  uvtparse.py
odincal/oops/tests/: test_default.py
odincal/scripts/: deploy.sh  docker-compose.deploy.yml
odincal/utils/: createfiles.py
scripts/: restart_executions.py
stacks/: log_group.py  odincal_stack.py
tests/: test_create_zpt.py
